tests/snapshots/structure__lib__pass__package_lib_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--lib

STDERR:

STDOUT:

crate package_lib_target
