tests/snapshots/structure__lib__pass__package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--lib

STDERR:

STDOUT:

crate package_multi_target
