tests/snapshots/structure__lib__pass__virtual_workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--lib

STDERR:

STDOUT:

crate package_lib_target
