tests/snapshots/structure__lib__pass__workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--lib

STDERR:

STDOUT:

crate package_lib_target
