tests/snapshots/structure__lib__pass__workspace_single_package_multi_target.snap
---
source: tests/structure.rs
expression: output
---
STDERR:

STDOUT:

crate package_multi_target

